force-app/main/default/objects/Quote__c/fields/BrochureSeason__c.field-meta.xml
<CustomField>
    <fullName>BrochureSeason__c</fullName>
    <description>The Brochure season the quote refers to</description>
    <label>Brochure Season</label>
    <length>255</length>
    <type>Text</type>
</CustomField>