force-app/main/default/objects/Quote__c/fields/CourseType__c.field-meta.xml
<CustomField>
    <fullName>CourseType__c</fullName>
    <description>The course type quoted</description>
    <label>Course Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>