force-app/main/default/objects/Quote__c/fields/Destination__c.field-meta.xml
<CustomField>
    <fullName>Destination__c</fullName>
    <description>Destination offered via the Quote</description>
    <label>Destination</label>
    <length>255</length>
    <type>Text</type>
</CustomField>