force-app/main/default/objects/Quote__c/fields/IsBasic__c.field-meta.xml
<CustomField>
    <fullName>IsBasic__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Identifies a Basic Quote (Poseidon definition)</description>
    <label>Is Basic</label>
    <type>Checkbox</type>
</CustomField>