force-app/main/default/objects/Quote__c/fields/NumberOfWeeks__c.field-meta.xml
<CustomField>
    <fullName>NumberOfWeeks__c</fullName>
    <description>The total number of weeks quoted</description>
    <label>Number Of Weeks</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>