force-app/main/default/objects/Quote__c/fields/PoseidonQuotationId__c.field-meta.xml
<CustomField>
    <fullName>PoseidonQuotationId__c</fullName>
    <description>The Poseidon Quotation Id</description>
    <label>Poseidon Quotation Id</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>