force-app/main/default/objects/Quote__c/fields/SentByEmail__c.field-meta.xml
<CustomField>
    <fullName>SentByEmail__c</fullName>
    <defaultValue>false</defaultValue>
    <description>indicates whether the quote has been sent via Email</description>
    <label>Sent by Email</label>
    <type>Checkbox</type>
</CustomField>