force-app/main/default/objects/Quote__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>The status of the quote</description>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Printed</fullName>
            </value>
            <value>
                <fullName>Emailed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>