force-app/main/default/objects/Quote__c/fields/ValidityDate__c.field-meta.xml
<CustomField>
    <fullName>ValidityDate__c</fullName>
    <description>Defines the last date the quote is considered valid</description>
    <label>Validity Date (up to)</label>
    <type>Date</type>
</CustomField>