force-app/main/default/objects/Quote__c/fields/ViewQuotePDF__c.field-meta.xml
<CustomField>
    <fullName>ViewQuotePDF__c</fullName>
    <description>Formula field used to display the PDF Url in a more user friendly way</description>
    <formula>IF(NOT(ISBLANK(QuotePDF__c)),HYPERLINK( QuotePDF__c , IMAGE("/img/icon/forecasts16.png", "PDF")),'')</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>View Quote PDF</label>
    <type>Text</type>
</CustomField>